--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -132,13 +132,20 @@ h2 {
     font-size: 18pt;
     color: whitesmoke;
     padding: 50px;
+    
+    
 
+}
+.conteudo-rodape img{
+    width: 50px;
+    height: 50px;
+    padding: 10px;
 }
 
 .rodape::before {
     content: '';
     width: 100%;
-    height: 3px;
+    height: 2px;
     background-color: rgb(245, 245, 245);
     display: block;
     margin: 0 auto;
