--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -2,20 +2,24 @@ html,
 body {
     font-size: 14pt;
     font-family: "apercu", -apple-system, system, sans-serif;
-    text-decoration: none;
     font-weight: 500;
     margin: 0 auto;
     padding: 0;
     width: 100%;
     height: 100%;
     background-color: #171a21;
-
-
+    box-sizing: border-box;
 }
+
+a{
+    text-decoration: none;
+   
+}
+
 
 /*barra que contem o logo e o menu */
 .cabecalho {
-    background-color: #171a21;
+    background-color:rgba(0, 0, 0, 0.404);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.644), 0 0 20px rgba(0, 0, 0, 0.89), 0 0 20px rgba(17, 17, 19, 0.719);
     display: inline-block;
     width: 100%;
@@ -24,8 +28,6 @@ body {
 /*logo do cabeçalho*/
 .logo {
     padding: 15px 0 0 50px;
-    width: 200px;
-
 
 }
 
@@ -34,7 +36,7 @@ ul {
 
     list-style-type: none;
     float: right;
-    display: flex;
+    display:block;
     margin-top: -21px;
     padding-right: 15px;
 
@@ -67,9 +69,6 @@ ul {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
-
-
 }
 
 .subcabecalho::before {
@@ -104,17 +103,22 @@ h2 {
 /*conteúdo principal da página*/
 
 .galeria {
-    display: block;
-    padding: 50px;
+    padding: 30px;
     background-color: #171a21;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    
 }
 
 .foto {
-    width: 300px;
+    width: 60vh;
     height: auto;
     transition: 1s;
-    margin: 20px;
+    margin: 30px;
+    border: solid 1px #6C63FF;
+    
 
 }
 
@@ -126,13 +130,15 @@ h2 {
 
 .rodape {
     display: block;
+   background-color: rgba(0, 0, 0, 0.404);
 
 }
 
 .conteudo-rodape {
     text-align: center;
     color: whitesmoke;
-    padding: 50px;
+    padding: 20px;
+   
 }
 
 .conteudo-rodape img {
@@ -156,3 +162,89 @@ h2 {
     display: block;
     margin: 0 auto;
 }
+
+.back-top{
+    color: chocolate;
+    padding: 10px;
+}
+
+
+@media (min-width: 600px){
+    .back-top{
+        display: none;
+        padding: 0;
+
+    }
+
+
+}
+
+@media (max-width: 600px) {
+body{
+    font-size: 12px;
+}
+
+.cabecalho{
+  background-color: rgba(0, 0, 0, 0.404);
+
+}
+.menu {
+   display: none;  
+}
+
+.cabecalho {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+}
+.cabecalho img{
+    width: 150px;
+}
+
+.foto{
+    width: 45vh;
+    padding: 0;
+    margin-block-start:10px;
+    border: solid 1px chocolate;
+    
+}
+.foto:hover {
+    transform: scale(1.1);
+    z-index: 2;
+    box-shadow: 0 0 10px chocolate, 0 0 10px chocolate, 0 0 10px chocolate;
+}
+.back-top{
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+   
+}
+.back-top a{
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 13pt;
+    color: chocolate;
+
+    
+}
+
+.back-top a:hover{
+    box-shadow: 0 0 10px chocolate, 0 0 10px chocolate, 0 0 10px chocolate;
+    transform: scale(1.1);
+    z-index: 2;
+    transition: 1s;
+    padding: 10px;
+    
+}
+
+.rodape{
+    background-color: rgba(0, 0, 0, 0.404);
+}
+
+
+
+
+}
+
