--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,37 +1,39 @@
-html,
-body {
-    margin: 0 auto;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: monospace;
-    background-color: rgb(0, 0, 0);
+}
+
+html,
+body {
+    font-family: Montserrat, Arial, sans-serif;
     color: whitesmoke;
-
-
-
+    font-weight: 400;
+    background-image: url(https://images.unsplash.com/photo-1523821741446-edb2b68bb7a0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .voltar {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-    margin: 5px;
+    padding: 5px;
+
 }
 
 .voltar a {
-    color: chocolate;
     text-decoration: none;
     font-size: 18px;
     font-weight: 800;
-    font-family: sans-serif;
+    color: whitesmoke;
 
 }
 
 .voltar a:hover {
-    color: rgb(44, 132, 247);
-    transition: 1s;
+    transition: 500ms;
     transform: scale(1.2);
-
+    text-shadow: 0 0 10px black;
 
 }
 
@@ -46,48 +48,41 @@ body {
     border-radius: 200px;
     padding: 10px;
     margin: 20px;
-    background-color: rgb(44, 132, 247);
 
 }
 
 .foto img:hover {
-    transition: 1s;
-    background-color: chocolate;
-    transform: scale(1.1);
-
+    transition: 500ms;
+    transform: scale(1.2);
 }
 
 .container-descricao {
-    background-color: rgba(255, 255, 255, 0.096);
+    background-color: rgba(0, 0, 0, 0.767);
     margin: auto;
     width: 60%;
-    border: 3px solid rgb(44, 132, 247);
+    border: 3px solid rgba(0, 0, 0, 0.603);
     padding: 10px;
     border-radius: 20px;
 
-
-
 }
-
 
 .descricao {
     text-align: left;
     font-size: 18px;
     line-height: 2em;
     padding: 0 20px;
-
 }
 
 h3 {
-    color: chocolate;
     text-align: center;
 }
 
 .rodape {
     text-align: center;
-    background-color: ;
-    font-size: 14px;
-
+    font-size: 17px;
+    color: rgb(255, 255, 255);
+    padding: 20px;
+    line-height: 1.3em;
 }
 
 @media (max-width: 600px) {
