--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -1,14 +1,15 @@
 html,
 body {
     font-size: 14pt;
-    font-family: Montserrat, Arial, sans-serif;;
+    font-family: Montserrat, Arial, sans-serif;
     font-weight: 400;
-    margin: 0 ;
+    margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
     background-color: #171a21;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 a {
@@ -19,26 +20,26 @@ a {
 /*barra que contem o logo e o menu */
 .cabecalho {
     background-color: rgba(0, 0, 0, 0.404);
-    display:flex;
+    display: flex;
     width: 100%;
     z-index: 14;
-    box-shadow: 0 4px 9px 0 rgba(0,0,0,.5);
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, .5);
     position: relative;
-   
-    
+
+
 }
 
-.cabecalho img{
+.cabecalho img {
     margin-top: 10px;
     margin-left: 15px;
     width: 180px;
     height: auto;
-    
+
 }
 
 .menu {
-    display:block;
-    width: 100%; 
+    display: block;
+    width: 100%;
 }
 
 .menu ul {
@@ -47,30 +48,25 @@ a {
     margin-right: 20px;
     margin-bottom: 10px;
     align-items: center;
-   
+
 }
 
-.menu li{
+.menu li {
     list-style: none;
 }
 
 .menu a {
-        transition: background-color, 0.2s, color 0.2s;
-        color: rgb(255, 255, 255);
-        padding: 2px 25px;
-    
+    transition: background-color, 0.2s, color 0.2s;
+    color: rgb(255, 255, 255);
+    padding: 2px 25px;
+
 }
 
 /*Efeito botão de menu*/
 .menu a:hover {
-    background-color:#6C63FF;
+    background-color: #6C63FF;
     border-radius: 20px;
     transition: 500ms;
-    transform: scale(1.2);
-    
-    
-    
-
 
 }
 
@@ -84,11 +80,12 @@ a {
     background-position: center;
 }
 
-.subcabecalho::after{
+.subcabecalho::after {
     content: '';
     display: block;
-    box-shadow: 0 4px 9px 0 rgba(0,0,0,.5);
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, .5);
     z-index: 14;
+
 }
 
 /* tag para selecionar o h2 dentro do subcabeçalho*/
@@ -100,6 +97,22 @@ h2 {
     transition: all 0.50s linear;
     font-family: Courier New, monospace;
     background-color: #1d1e1f8e;
+
+}
+
+.barra{
+    animation: piscarBarra 500ms linear infinite;
+}
+@keyframes piscarBarra{
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 
@@ -130,30 +143,33 @@ h2 {
     border: solid 1px #6C63FF;
 
 
+
 }
 
 .foto:hover {
     transform: scale(1.2);
     z-index: 2;
     box-shadow: 0 0 10px #6C63FF, 0 0 10px #6C63FF, 0 0 10px darkblue;
+
 }
 
 .rodape {
     display: block;
     background-color: rgba(0, 0, 0, 0.404);
-
+    font-size: 13pt;
 }
 
 .conteudo-rodape {
     text-align: center;
-    color: whitesmoke;
+    color: #fff;
     padding: 20px;
+
 
 }
 
 .conteudo-rodape img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     padding: 10px;
 }
 
@@ -162,6 +178,7 @@ h2 {
     z-index: 2;
     box-shadow: 0 0 10px #6C63FF, 0 0 10px #6C63FF, 0 0 10px darkblue;
     transition: 500ms;
+
 }
 
 .rodape::before {
@@ -171,21 +188,60 @@ h2 {
     background-color: rgb(245, 245, 245);
     display: block;
     margin: 0 auto;
+
 }
 
-.back-top {
-    color: chocolate;
-    padding: 10px;
+/*ícone para voltar ao topo*/
+.topo-media {
+    margin: -20px;
+    margin-left: 10px;
+    font-size: 2em;
+    text-align: left;
+    display: block;
+}
+
+/*ícone para voltar ao topo*/
+.fa-angle-double-up {
+    color: cornflowerblue;
+}
+
+.fa-angle-double-up:hover {
+    text-shadow: 0 0 10px rgb(255, 255, 255);
+    transition: 500ms;
+    transform: scale(1.1);
+
+}
+
+/*ícone de coração*/
+.fa-heart {
+    color: rgb(172, 19, 19);
+}
+
+/*ícone café*/
+.fa-coffee {
+    color: cornflowerblue;
+}
+
+/*ícones menu principal*/
+.fa-id-card {
+    color: cornflowerblue;
+
+}
+
+.fa-mobile-alt {
+    color: cornflowerblue;
+}
+
+.fa-images {
+    color: cornflowerblue;
 }
 
 
 @media (min-width: 600px) {
-    .back-top {
+    .rodape-media {
         display: none;
-        padding: 0;
 
     }
-
 
 }
 
@@ -228,36 +284,32 @@ h2 {
         box-shadow: 0 0 10px chocolate, 0 0 10px chocolate, 0 0 10px chocolate;
     }
 
-    .back-top {
-        margin-top: 15px;
-        display: flex;
+    .rodape-media {
+        display: block;
         justify-content: center;
+        font-size: 17px;
+        padding: 20px;
+
+
 
     }
 
-    .back-top a {
+    .rodape-media a {
         padding: 10px;
-        border-radius: 20px;
-        font-size: 13pt;
         color: chocolate;
 
+    }
+
+    .rodape-media a:hover {
+        box-shadow: 0 0 5px chocolate, 0 0 5px chocolate, 0 0 5px chocolate;
+        transition: 500ms;
+
+
 
     }
 
-    .back-top a:hover {
-        box-shadow: 0 0 10px chocolate, 0 0 10px chocolate, 0 0 10px chocolate;
-        transform: scale(1.1);
-        z-index: 2;
-        transition: 1s;
-        padding: 10px;
-
+    .topo-media {
+        display: none;
     }
-
-    .rodape {
-        background-color: rgba(0, 0, 0, 0.404);
-    }
-
-
-
 
 }
