--- a/css/sobre.css
+++ b/css/sobre.css
@@ -11,14 +11,19 @@ body {
     font-weight: 400;
     background-color: #171a21;
     scroll-behavior: smooth;
+    
 }
 
-
+a{
+    text-decoration: none;
+    color:rgb(197, 124, 71);
+}
 .voltar {
     display: flex;
     justify-content: center;
     padding: 5px;
     box-shadow: 0 0 35px rgb(197, 124, 71);
+   
 
 }
 
@@ -62,7 +67,8 @@ body {
 
 .container-descricao {
     margin: auto;
-    width: 100vh;
+    width: 80%;
+    height: auto;
     border: 3px solid cornflowerblue;
     padding: 10px;
     border-radius: 20px;
@@ -70,18 +76,19 @@ body {
 
 }
 
-.descricao {
-    text-align: center;
+.descricao p{
+    text-align: left;
     font-size: 13pt;
     line-height: 2em;
-    padding: 5px;
-
+    padding: 20px;
+    
 
 }
 
 .intro {
     text-align: center;
-    font-size: 20pt;
+    font-size: 18pt;
+    line-height: 2em;
      
 }
 
@@ -111,6 +118,7 @@ body {
     font-size: 1.5em;
 }
 
+
 @media (max-width: 600px) {
     .descricao {
         font-size: 15px;
@@ -118,7 +126,8 @@ body {
     }
 
     .container-descricao {
-        width: 90%;
+        margin: auto;
+        width: 90%
     }
 
     .foto img {
