--- a/css/sobre.css
+++ b/css/sobre.css
@@ -77,7 +77,7 @@ a{
 }
 
 .descricao p{
-    text-align: left;
+    text-align: justify;
     font-size: 13pt;
     line-height: 2em;
     padding: 20px;
@@ -121,8 +121,8 @@ a{
 
 @media (max-width: 600px) {
     .descricao {
-        font-size: 15px;
-        text-align: left;
+        font-size: 13px;
+        text-align: justify;
     }
 
     .container-descricao {
