--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -239,8 +239,8 @@ h2 {
     color: cornflowerblue;
 }
 
-
-@media (min-width: 600px) {
+/*-----------------------------------------------------------*/
+@media only screen and (min-width: 600px) {
     .rodape-media {
         display: none;
 
@@ -248,7 +248,43 @@ h2 {
 
 }
 
-@media (max-width: 600px) {
+/*-----------------------------------------------------------*/
+@media only screen and (max-width: 1024px) {
+
+    .subcabecalho {
+        margin-top: auto;
+
+    }
+
+    .foto {
+        width: 40vh;
+        margin-top: 40px;
+    }
+}
+
+/*-----------------------------------------------------------*/
+@media only screen and (max-width: 800px) {
+    .galeria {
+        padding: 10px;
+
+    }
+
+    .foto {
+        width: 50vh;
+        margin-top: 50px;
+
+
+    }
+
+    .subcabecalho {
+        margin-top: 2vh;
+    }
+
+
+}
+
+/*-----------------------------------------------------------*/
+@media only screen and (max-width: 600px) {
     body {
         font-size: 12px;
     }
@@ -330,26 +366,20 @@ h2 {
 
 }
 
-@media (max-width: 800px) {
-    .galeria {
-        padding: 10px;
+/*-----------------------------------------------------------*/
+@media only screen and (max-width: 480px) {
+    .subcabecalho {
+        height: 180px;
     }
 
     .foto {
-        width: 35vh;
-        margin: 10px;
-
+        width: 220px;
+        margin-top: 30px;
     }
-
-    .subcabecalho {
-
-        margin-top: 2vh;
-    }
-
-
 }
 
-@media (max-width: 320px) {
+/*-----------------------------------------------------------*/
+@media only screen and (max-width: 320px) {
     .subcabecalho {
         margin-top: auto;
     }
@@ -364,9 +394,19 @@ h2 {
         width: 100px;
 
     }
-    .foto{
-        width: 50vh;
+
+    .foto {
+        width: 200px;
     }
 
+    .subcabecalho {
+        height: 150px;
+    }
 
-}
+    .rodape {
+        display: block;
+        background-color: rgba(0, 0, 0, 0.404);
+        font-size: 10pt;
+
+
+    }
