--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -1,15 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html,
 body {
     font-size: 14pt;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
-    margin: 0;
-    padding: 0;
     width: 100%;
     height: 100%;
     background-color: #171a21;
-    box-sizing: border-box;
     scroll-behavior: smooth;
+ 
 
 }
 
@@ -25,9 +29,10 @@ a {
     top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     z-index: 20;
-    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.664);
-    position: fixed;
+    box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.664);
+    position: relative;
 
 
 }
@@ -41,7 +46,6 @@ a {
 }
 
 .menu {
-    display: block;
     width: 100%;
 }
 
@@ -49,7 +53,7 @@ a {
     display: flex;
     justify-content: flex-end;
     margin-right: 20px;
-    margin-bottom: 10px;
+    margin-top: 15px;
     align-items: center;
 
 }
@@ -60,7 +64,7 @@ a {
 
 .menu a {
     transition: background-color, 0.2s, color 0.2s;
-    color: rgb(255, 255, 255);
+    color: whitesmoke;
     padding: 2px 25px;
 
 }
@@ -78,23 +82,28 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    margin-top: 5vh;
-    height: auto;
-    background-image: url("../background/3776683.jpg");
+    height: 25em;
+    background-image: url(https://images8.alphacoders.com/512/thumb-1920-512976.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    opacity: 0.9;
+    display: flex;
 }
 
-/* tag para selecionar o h2 dentro do subcabeçalho*/
-h2 {
-    color: #ffffff;
+
+/* tag para selecionar o h1 dentro do subcabeçalho*/
+
+.subtitle h1 {
+    color: whitesmoke;
     letter-spacing: 1pt;
-    font-size: 4.0vw;
+    font-size: 3.9vw;
     text-shadow: 5px 5px 5px #1d1e1f;
-    transition: all 0.50s linear;
-    font-family: Courier New, monospace;
-    background-color: #1d1e1f8e;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 200;
+    justify-content: center;
+    margin-top: 5.5em;
+    margin-left: 1em;
 
 }
 
@@ -116,25 +125,18 @@ h2 {
     }
 }
 
-
-
-/*espaçamento do subcabeçalho*/
-.espacamento {
-    padding: 10%;
-
-}
-
 /*conteúdo principal da página*/
 
 .galeria {
     padding: 30px;
-    background-image: radial-gradient(ellipse farthest-side, rgba(0, 111, 255, 0.15), transparent);
+    background-image: radial-gradient(ellipse farthest-side, rgba(0, 110, 255, 0.397), transparent);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center center;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
+   
 
 }
 
@@ -143,36 +145,39 @@ h2 {
     height: auto;
     transition: 500ms;
     margin: 20px;
-    border: solid 1px #6C63FF;
-
-
+    
 
 }
 
 .foto:hover {
-    transform: scale(1.2);
-    z-index: 2;
     box-shadow: 0 0 10px #6C63FF, 0 0 10px #6C63FF, 0 0 10px darkblue;
 
 }
 
+
 .rodape {
     display: block;
-    background-color: rgba(0, 0, 0, 0.404);
     font-size: 13pt;
+    background-color: #0e1014;
+    margin: 0 auto;
+    padding: 10px;
+
+
 }
 
 .conteudo-rodape {
     text-align: center;
     color: #fff;
     padding: 20px;
+    line-height: 2em;
+
 
 
 }
 
 .conteudo-rodape img {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     padding: 10px;
 }
 
@@ -181,16 +186,6 @@ h2 {
     z-index: 2;
     box-shadow: 0 0 10px #6C63FF, 0 0 10px #6C63FF, 0 0 10px darkblue;
     transition: 500ms;
-
-}
-
-.rodape::before {
-    content: '';
-    width: 100%;
-    height: 2px;
-    background-color: rgb(245, 245, 245);
-    display: block;
-    margin: 0 auto;
 
 }
 
@@ -239,8 +234,8 @@ h2 {
     color: cornflowerblue;
 }
 
-/*-----------------------------------------------------------*/
-@media only screen and (min-width: 600px) {
+/*---------------------DONE------------------------------------*/
+@media (min-width: 600px) {
     .rodape-media {
         display: none;
 
@@ -248,50 +243,73 @@ h2 {
 
 }
 
-/*-----------------------------------------------------------*/
-@media only screen and (max-width: 1024px) {
-
-    .subcabecalho {
-        margin-top: auto;
-
-    }
-
-    .foto {
-        width: 40vh;
-        margin-top: 40px;
-    }
-}
-
-/*-----------------------------------------------------------*/
-@media only screen and (max-width: 800px) {
-    .galeria {
-        padding: 10px;
-
-    }
+/*--------------------DONE-------------------------------*/
+@media (max-width: 1024px) {
 
     .foto {
         width: 50vh;
-        margin-top: 50px;
-
-
+        margin-top: 40px;
     }
 
-    .subcabecalho {
-        margin-top: 2vh;
+    .subtitle h1 {
+        font-size: 2.4em;
+        margin-right: 1em;
+        margin-top: 7em;
+        color: rgb(255, 255, 255);
+        background-color: rgba(0, 0, 0, 0.466);
+        border-radius: 5px;
+        padding: 2px;
     }
 
-
+    .conteudo-rodape img{
+        width: 70px;
+        height: 70px;
+    }
 }
 
-/*-----------------------------------------------------------*/
-@media only screen and (max-width: 600px) {
-    body {
-        font-size: 12px;
+
+/*---------------------DONE-------------------------------*/
+@media (max-width: 800px) {
+
+    .subcabecalho {
+        height: 390px;
     }
 
-    h2 {
-        background-color: #1d1e1fd3;
-        border-radius: 2px;
+    .foto {
+        width: 25vh;
+
+    }
+
+    .subtitle h1 {
+        font-size: 1.8em;
+        margin-top: 8em;
+    }
+
+
+    .conteudo-rodape {
+        margin-top: 2.8em;
+        position: relative;
+        font-size: 1.4em;
+
+    }
+
+    .conteudo-rodape img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .topo-media {
+        margin-top: -1em;
+    }
+    
+}
+
+/*------------------------DONE-----------------------------*/
+@media (max-width: 600px) {
+
+    .subtitle h1 {
+        font-size: 1.3em;
+        margin-top: 7em;
     }
 
     .menu {
@@ -304,17 +322,11 @@ h2 {
         align-items: center;
     }
 
-    .cabecalho img {
-        width: 150px;
-    }
-
     .subcabecalho {
-
-        margin-top: 3vh;
+        height: 300px;
     }
 
     .galeria {
-
         background-image: radial-gradient(ellipse farthest-side, rgba(238, 140, 11, 0.274), transparent);
         background-size: 100%;
         background-repeat: no-repeat;
@@ -324,30 +336,40 @@ h2 {
     .foto {
         width: 40vh;
         padding: 0;
-        margin-block-start: 10px;
-        border: solid 1px chocolate;
+        margin-block-start: 20px;
 
     }
 
     .foto:hover {
-        transform: scale(1.1);
-        z-index: 2;
         box-shadow: 0 0 10px chocolate, 0 0 10px chocolate, 0 0 10px chocolate;
     }
 
-    .rodape-media {
-        display: block;
-        justify-content: center;
-        font-size: 17px;
-        padding: 20px;
-
-
+    footer {
+        margin: 0 auto;
+        padding: 10px;
+        background-color: #0e1014;
 
     }
 
+    .conteudo-rodape {
+        font-size: 14pt;
+    }
+
+    .conteudo-rodape img {
+        width: 70px;
+        height: 70px;
+
+    }
+
+    .rodape-media {
+       display: flex; 
+        justify-content: center;
+        font-size: 16pt;
+        margin-top: 0.5em;
+    }
 
     .rodape-media a {
-        padding: 10px;
+        padding: 5px;
         color: chocolate;
 
     }
@@ -355,9 +377,7 @@ h2 {
     .rodape-media a:hover {
         box-shadow: 0 0 5px chocolate, 0 0 5px chocolate, 0 0 5px chocolate;
         transition: 500ms;
-
-
-
+        z-index: 2;
     }
 
     .topo-media {
@@ -366,33 +386,31 @@ h2 {
 
 }
 
-/*-----------------------------------------------------------*/
-@media only screen and (max-width: 480px) {
+/*----------------DONE---------------------------*/
+@media (max-width: 480px) {
     .subcabecalho {
-        height: 180px;
+        height: 250px;
+    }
+
+    .subtitle h1 {
+        font-size: 1em;
+        margin-top: 9em;
     }
 
     .foto {
-        width: 220px;
-        margin-top: 30px;
+        width: 40vh;
     }
 }
 
 /*-----------------------------------------------------------*/
-@media only screen and (max-width: 320px) {
-    .subcabecalho {
-        margin-top: auto;
-    }
-
-    .cabecalho {
-        margin-top: -10px;
-        position: relative;
-
+@media (max-width: 320px) {
+    .subtitle h1 {
+        font-size: 12PT;
+        margin-top: 7em;
     }
 
     .cabecalho img {
-        width: 100px;
-
+        width: 120px;
     }
 
     .foto {
@@ -400,13 +418,21 @@ h2 {
     }
 
     .subcabecalho {
-        height: 150px;
+        height: 200px;
     }
 
-    .rodape {
-        display: block;
-        background-color: rgba(0, 0, 0, 0.404);
-        font-size: 10pt;
+    .conteudo-rodape {
+        font-size: 12pt;
+        font-weight: lighter;
+    }
 
+    .rodape-media {
+        font-size: 14pt;
+    }
+
+    .conteudo-rodape img {
+        width: 60px;
+        height: 60px;
 
     }
+}
