--- a/css/coffeebreak.css
+++ b/css/coffeebreak.css
@@ -115,10 +115,11 @@ a {
 .menu li:hover::after {
     content: '';
     display: block;
-    height: 3px;
+    height: 1.5px;
     background-color: #6C63FF;
     transition: 500ms;
     box-shadow: 0 0 10px #6C63FF;
+    margin-top: 5px;
 
 }
 
