--- a/css/sobre.css
+++ b/css/sobre.css
@@ -2,153 +2,259 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.795);
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-    background: rgba(0, 0, 0, 0.795);
-}
-
-::-webkit-scrollbar-thumb {
-    background: #6c63ff;
+    text-decoration: none;
 }
 
 html,
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: whitesmoke;
-    font-style: none;
-    background-color: #171a21;
-    scroll-behavior: smooth;
     width: 100%;
     height: 100%;
-
+    background-image: url(https://images.freeimages.com/images/large-previews/840/space-halo-1-1626963.jpg);
+    color: #ffffff;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    scroll-behavior: smooth;
 }
 
-a {
-    text-decoration: none;
-    color: rgb(197, 124, 71);
-}
-
-.voltar {
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-    background-color: #00000062;
-
-
-}
-
-.voltar a {
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bolder;
-    color: whitesmoke;
-
-}
-
-.voltar a:hover {
-    transition: 500ms;
-    transform: scale(1.2);
-    text-shadow: 0 0 20px cornflowerblue;
-
-
-
-}
-
-.container-foto {
-    display: flex;
-    float: left;
-    
-
-}
-
-.foto img {
-    width: 300px;
-    height: 300px;
-    border-radius: 200px;
-    margin: 10px;
-
-}
-
-.foto img:hover {
-    transition: 500ms;
-    transform: rotate(360deg);
-}
-
-.container-descricao {
-    margin: auto;
+.barratopo {
     width: 100%;
+    height: 50px;
+    display: flex;
+    position: fixed;
+    background-color: #0c0c0c;
+}
+
+/*ul*/
+.menu {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    margin-left: 40px;
+
+}
+
+/*barra vertical para separar o menu*/
+.barravertical{
+    width: 2px;
+    height: 20px;
+    background-color: rgba(75, 75, 75, 0.34);
+}
+
+.menu li,
+a {
+    list-style: none;
+    margin: 7px;
+    font-weight: 600;
+    color:#ffffff;
+    opacity: 0.7;
+    font-size: 1em;
+    text-transform: uppercase;
+    font-family: "Titillium Web", "Helvetica Neue", "Helvetica", Arial, sans-serif;
+
+}
+
+/*Barra inferios que aparece quando passa o mouse sobre o menu*/
+.menu li:hover::after {
+    content: '';
+    display: block;
+    height: 2px;
+    margin-top: 5px;
+    background-color:rgba(75, 75, 75, 0.34);
+    transition: 500ms;
+
+}
+
+.menu li,
+a:hover {
+    opacity: 1;
+   
+
+}
+
+.box-principal-autor {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    background-color:  rgba(0, 0, 0, 0.37);
+
+}
+
+.box-sobre-autor::before {
+    content: 'Sobre o autor';
+    display: flex;
+    background-color: #15202b62;
+    height: 40px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.70em;
+    font-weight: 700;
+
+
+}
+
+.box-sobre-autor {
+    background-color:#06090c;
+    width: 150vh;
     height: auto;
-    border: 3px solid cornflowerblue;
+    margin-bottom: 50px;
+    margin-top: 60px;
+    margin-top: 6em;
+}
+
+.minhafoto {
+    width: 200px;
+    height: 200px;
+    float: left;
     padding: 10px;
-    border-radius: 20px;
-    box-shadow: 0 0 30px cornflowerblue;
-    margin-top: 4em;
-
+    margin-top: 10px;
 }
 
-.descricao p {
+.box-sobre-autor p {
     text-align: left;
-    font-size: 13pt;
-    line-height: 2em;
+    font-size: 1.1em;
+    line-height: 1.5;
     padding: 20px;
-
+    letter-spacing: 1px;
 
 }
 
-.intro {
-    text-align: center;
-    font-size: 18pt;
-    line-height: 2em;
+.box-principal-site {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.37);
 
+}
+
+.box-sobre-site::before {
+    content: 'Sobre o site';
+    display: flex;
+    background-color: #15202b62;
+    height: 40px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.70em;
+    font-weight: 700;
+
+}
+
+.box-sobre-site {
+    width: 150vh;
+    height: auto;
+    background-color: #06090c;
+    margin-bottom: 50px;
+    margin-top: 60px;
+
+}
+
+.box-sobre-site p {
+    text-align: left;
+    font-size: 1.1em;
+    line-height: 1.5;
+    padding: 20px;
+    letter-spacing: 1px;
 }
 
 .rodape {
-    font-size: 12pt;
-    color: rgb(255, 255, 255);
-    background-color: #00000062;
-    padding: 20px;
+    background-color: #0c0c0c;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    padding: 10px;
 }
 
-/*Logo coração*/
-.fa-heart {
+/*ícones*/
+
+.fa-heart{
     color: red;
+    font-size: 1.40em;
 }
 
-/*logo café*/
-.fa-coffee {
-    color: royalblue;
+.fa-heart {
+    animation: piscarcoracao 1s linear infinite;
 }
 
-/*logo home*/
-.fa-home {
-    color: royalblue;
-    font-size: 1.5em;
-}
-
-
-@media (max-width: 600px) {
-    .descricao {
-        font-size: 12pt;
-        text-align: justify;
+@keyframes piscarcoracao {
+    0% {
+        opacity: 1;
     }
 
-    .foto img {
-        width: 220px;
-        height: 220px;
-        
+    50% {
+        opacity: 0.1;
     }
 
-    .intro{
-        font-size: 15pt;
+    100% {
+        opacity: 0;
+    }
+}
+
+.fa-dog{
+    color: sandybrown;
+}
+
+.vista{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: x-large;
+    font-family: 'Courier New', Courier, monospace;
+    animation: fotos 40s cubic-bezier(1, 1, 1, 1) infinite;
+    
+}
+
+@keyframes fotos{
+
+    10% {
+       background-color: rgba(255, 166, 0, 0);
        
+    }
+
+    20% {
+       background-color:rgba(255, 166, 0, 0.247);
+    }
+
+   30% {
+        background-color: rgba(255, 166, 0, 0.377);
+
+    }
+
+    40% {
+       background-color:rgba(255, 166, 0, 0.596);
+    }
+
+    50% {
+        background-color: rgba(255, 166, 0, 0.555);
+    }
+
+    60% {
+        background-color:rgba(0, 140, 255, 0.11);
+    }
+
+    70% {
+        background-color:rgba(0, 140, 255, 0.281);
+    }
+
+    80% {
+        background-color: rgba(0, 140, 255, 0.445)
+    }
+
+    90% {
+        background-color: rgba(0, 0, 0, 0.274);
+    }
+
+    100% {
+        background-color: rgba(0, 0, 0, 0.048);
     }
 }
